refactor: improve SEO

--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,5 +1,5 @@
 {% extends 'wera/base.html' %}
-{% block title %} Wera Feed {% endblock %}
+{% block title %} Wera | Empowering Communities Through Social Hiring {% endblock %}
 {% load static %}
 {% block content %}
 <style>
