fix: add grapelli

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1,width=device-width,viewport-fit=cover" />
     <meta
       name="description"
       content="Discover Wera, the go-to platform connecting students, businesses, and professionals. Gain work experience, hire top talent, or expand your professional network. Empower communities through meaningful connections and innovation."
@@ -15,28 +15,28 @@
       name="keywords"
       content="social hiring platform, job opportunities for students, hire university talent, professional networking, freelance contracts, part-time jobs, business talent solutions, skill development, flexible work, innovation in recruitment, jobs in Nairobi, jobs in Kenya, jobs in Africa, Social hiring platform
 
-    Job platform for university students
-    
-    Part-time jobs for students
-    
-    Freelance opportunities for professionals
-    
-    Affordable talent for businesses
-    
-    Skill development for students
-    
-    Remote jobs for students
-    
-    Professional networking platform
+    Job platform for university students,
+
+    Part-time jobs for students,
+
+    Freelance opportunities for professionals,
+
+    Affordable talent for businesses,
+
+    Skill development for students,
+
+    Remote jobs for students,
+
+    Professional networking platform,
     Best platform for student part-time jobs
+,
+How to hire university students for businesses,
 
-How to hire university students for businesses
+Affordable freelance professionals near me,
 
-Affordable freelance professionals near me
+Remote work opportunities for students,
 
-Remote work opportunities for students
-
-Skill-building jobs for students
+Skill-building jobs for students,
 
 Top job platforms for professionals and students"
     />
