--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -72,12 +72,9 @@ Top job platforms for professionals and students"
       name="google-site-verification"
       content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -116,7 +113,9 @@ Top job platforms for professionals and students"
       }
 
       body {
-        font-family: "Inter", sans-serif;
+        font-family: "Hammersmith One", serif !important;
+        font-weight: 400;
+        font-style: normal;
         background-color: var(--background);
         color: var(--text);
       }
