feat: add privacy policy and tos

--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -8,11 +8,11 @@
         <div class="row g-2">
           <div class="col-12 mb-2">
             <div class="form-group">
-              <label for="description">Description</label>
+              <label for="form">Description</label>
               <textarea
                 class="form-control"
-                name="description"
-                id="description"
+                name="form"
+                id="form"
                 cols="30"
                 rows="5"
                 required
